--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "babel-loader": "^6.2.7",
     "csscomb": "^3.1.7",
     "http-server": "^0.9.0",
-    "webpack": "^1.13.3"
+    "webpack": "^1.13.3",
+    "react-scripts": "0.7.0"
   },
   "dependencies": {
     "babel-cli": "^6.18.0",
